--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -29,6 +29,14 @@ h2 > .label {
    margin-bottom: 0;
 }
 
+.modal .modal-footer {
+   text-align: left;
+}
+
+.modal .modal-footer .btn-cancel {
+  float: right;
+}
+
 .btn-toolbar >.btn-group + .btn-group {
   margin-left: -5px;
 }
