--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
 </head>
 <body>
 
-   <body>
-     <header>
-        <%= render "shared/header" %>
-     </header>
-     <div class="container">
-       <%= yield %>
-     </div>
-   </body>
+   <header>
+     <%= render "shared/header" %>
+   </header>
 
+   <div class="container">
+    <%= yield %>
+   </div>
+     
+   <%= render "shared/templates" %>
 </body>
 </html>
