--- a/frontend/app/assets/javascripts/collections.show.js.erb
+++ b/frontend/app/assets/javascripts/collections.show.js.erb
@@ -13,14 +13,14 @@ $(function() {
    var loadPaneForNode = function(nodeEl) {
       if (nodeEl.attr("rel") === "archival_object") {
          $.ajax({
-            url: APP_PATH+"archival_objects/"+nodeEl.attr("id")+"?inline=true",
+            url: APP_PATH+"archival_objects/"+nodeEl.data("id")+"?inline=true",
             success: function(html) {
                $("#object_container").html(html);
             }
          });  
       } else if (nodeEl.attr("rel") === "collection") {         
          $.ajax({
-            url: APP_PATH+"collections/"+nodeEl.attr("id")+"?inline=true",
+            url: APP_PATH+"collections/"+nodeEl.data("id")+"?inline=true",
             success: function(html) {
                $("#object_container").html(html);
             }
@@ -32,7 +32,7 @@ $(function() {
        $(".expand-tree", ".archives-tree-container").on("click", function() {
            $(".archives-tree-container").addClass("expanded");
            $(".archives-tree-container").animate({
-               width: 500
+               width: $(".archives-tree-container").parents(".container:first").width()-5
            }, 500, function() {
                $(".expand-tree", ".archives-tree-container").hide();
                $(".retract-tree", ".archives-tree-container").show();
@@ -94,7 +94,6 @@ $(function() {
              $("li:first", $tree).addClass("selected");
           }
           $tree.jstree("open_node", $(".selected", $tree), null, true);
-          node_id_for_page = $(".selected", $tree).attr("id");
           $tree.jstree("select_node", $(".selected", $tree), null, true);
        }).bind("select_node.jstree", function (event, data) {
           var selectedNode = $(data.rslt.obj);
