--- a/frontend/app/views/archival_objects/_edit_inline.html.erb
+++ b/frontend/app/views/archival_objects/_edit_inline.html.erb
@@ -1,3 +1,3 @@
-<%= form_for @archival_object, :as => "archival_object", :url=>{:action=>:update, :id=>@archival_object.id}, :html=>{:class=>'form-horizontal'} do |f| %>
+<%= form_for @archival_object, :as => "archival_object", :url=>{:action=>:update}, :html=>{:class=>'form-horizontal'} do |f| %>
    <%= render :partial=>"archival_objects/form_container", :locals=>{:f => f} %>
 <% end %>
