add edit button to each form and show edit pane for selected node; also retain selected node upon Finish Editing;

--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -39,7 +39,7 @@ $(function() {
 
       $(".btn-primary", $form).attr("disabled", "disabled");
       $(".btn-cancel", $form).html("Revert Changes").attr("disabled", "disabled");
-      $(".btn-cancel", $form).before("<a id='save_and_finish_editing' class='btn btn-success' href='" + APP_PATH + "collections/" + collection_tree_data.collection_id + "'>Finish Editing</a>");
+      $(".btn-cancel", $form).before("<a id='save_and_finish_editing' class='btn btn-success' href='" + APP_PATH + "collections/" + collection_tree_data.collection_id + "#" + $(".selected", $tree).attr("id") + "'>Finish Editing</a>");
       
       $form.bind("form-changed", function() {
           form_changed = true;
