--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -68,3 +68,7 @@ h2 > .label {
     -moz-border-radius-bottomright: 4px;
     -moz-border-radius-topright: 4px;    
 }
+
+#object_container {
+   position: relative;
+}
