--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -1,3 +1,9 @@
+<div class="btn-group" style="float: right">
+   <% if @collection_id %>
+      <%= link_to "Edit", {:controller=>:collections, :action=>:edit, :id=>@collection_id, :anchor=>"archival_object_#{@archival_object.id}"}, :class=>"btn btn-small" %>
+   <% end %>
+</div>
+
 <h2><%= @archival_object.title %> <span class="label label-info">Archival Object</span></h2>
 
 <div class="row-fluid label-and-value">
