--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -5,13 +5,12 @@
 $(function() {
 
     var form_changed = false,
-        $tree, // will be set upon initTree()
+        $tree = $("#archives_tree"),
         $container = $("#object_container"),
         collection_tree_data = AS.tree_data["collection-id-" + $(".archives-tree").data("collection-id")];
 
     var renderTree = function() {
-        $("#archives_tree").html(AS.renderTemplate("tree_template", {tree: collection_tree_data}));
-        $tree = $("#archives_tree");
+        $tree.html(AS.renderTemplate("tree_template", {tree: collection_tree_data}));      
      }
 
     var rerenderTree = function() {
@@ -59,8 +58,13 @@ $(function() {
 
              if ($container.find(".alert-error:first, .alert-warning:first").length) {
                 $container.triggerHandler("submit.error");
-             } else {                
+             } else {
                 form_changed = false;
+                if (location.hash === "#newAO") {
+                   $(window).off("hashchange");
+                   location.hash = "#archival_object_" + $("#ao_id", $container).val();
+                   $(window).on("hashchange", onHashChange);
+                }
                 rerenderTree();
                 $container.triggerHandler("submit.success");
              }
@@ -99,6 +103,22 @@ $(function() {
       if (!nodeEl.hasClass("collection") && !nodeEl.parents("li:first").hasClass("collection")) {
          $(".btn-toolbar", "#archives_tree_toolbar").append(AS.renderTemplate("tree_toolbar_addsibling_template"));
       }      
+   };
+
+   var onHashChange = function(){
+      if (location.hash === "#newAO") {
+         return;
+      }
+      
+      var $selected = $(location.hash);
+      $(".selected", $tree).removeClass("selected");
+      $selected.addClass("selected");
+      $tree.jstree("deselect_all");
+      $tree.jstree("open_node", $selected);
+      $tree.jstree("select_node", $selected);
+
+      loadPaneForNode($selected);
+      loadTreeActionsForNode($selected);
    };
 
    var addEventBindings = function() {
@@ -196,20 +216,11 @@ $(function() {
           });
       });
       
-      $(window).hashchange(function(){
-         var $selected = $(location.hash);
-         $(".selected", $tree).removeClass("selected");
-         $selected.addClass("selected");
-         $tree.jstree("open_node", $selected);
-
-         loadPaneForNode($selected);
-         loadTreeActionsForNode($selected);
-      });
+      $(window).hashchange(onHashChange);
    };
    
    var initTree = function(onTreeLoadCallback) {
-      $tree = $(".archives-tree").jstree({
-
+      $tree.jstree({
           "themes": {
              "theme": "default",
              "url": "<%= asset_path('jstree/style.css') %>"
@@ -253,7 +264,9 @@ $(function() {
              "save_selected": false
          },
          "plugins": [ "themes", "html_data", "ui", "crrm", "dnd", "cookies"]
-      }).bind("loaded.jstree", function (event, data) {
+      }).one("loaded.jstree", function() {
+         $(".selected", $tree).removeClass("selected");
+
          if (location.hash) {
             $(location.hash).addClass("selected");
          }
@@ -261,6 +274,7 @@ $(function() {
          if ($(".selected", $tree).length === 0) {
             $("li:first", $tree).addClass("selected");
          }
+
          $tree.jstree("open_node", $(".selected", $tree));
          $tree.jstree("select_node", $(".selected", $tree));
 
@@ -268,52 +282,57 @@ $(function() {
          
          if (onTreeLoadCallback) onTreeLoadCallback();
       }).bind("before.jstree", function (event, data) {
-         // check current form
-         if (form_changed && data.func === "select_node") {                     
-            event.preventDefault();
-            event.stopImmediatePropagation();
+            // check current form
+            if (form_changed && data.func === "select_node") {
+               event.preventDefault();
+               event.stopImmediatePropagation();
 
-            var $target_node = $(data.args[0]).parent(); // get the <li> node above the <a>
-            
-            // open save your changes modal
-            AS.openCustomModal("saveYourChangesModal", "Save Your Changes", AS.renderTemplate("save_changes_modal_template"));
-            
-            $("#saveChangesButton", "#saveYourChangesModal").on("click", function() {
-               $("form", $container).triggerHandler("submit");
-               
-               var onSubmitSuccess = function() {
-                  form_changed = false
+               var $target_node = $(data.args[0]).parent(); // get the <li> node above the <a>
+
+               // open save your changes modal
+               AS.openCustomModal("saveYourChangesModal", "Save Your Changes", AS.renderTemplate("save_changes_modal_template"));
+
+               $("#saveChangesButton", "#saveYourChangesModal").on("click", function() {
+                  $("form", $container).triggerHandler("submit");
+
+                  var onSubmitSuccess = function() {
+                     form_changed = false
+                     location.hash = $target_node.attr("id");
+                     $("#saveYourChangesModal").modal("hide");
+                     $container.unbind("submit.success", onSubmitSuccess);
+                     $container.unbind("submit.error", onSubmitError);
+                  };
+
+                  var onSubmitError = function() {
+                     $("#saveYourChangesModal").modal("hide");
+                     $container.unbind("submit.success", onSubmitSuccess);
+                     $container.unbind("submit.error", onSubmitError);
+                  };
+
+                  $container.bind("submit.success", onSubmitSuccess);
+                  $container.bind("submit.error", onSubmitError);
+               });
+
+               $("#dismissChangesButton", "#saveYourChangesModal").on("click", function() {
+                  form_changed = false;
                   $tree.jstree("deselect_all");
                   $tree.jstree("select_node", $target_node);
-                  $("#saveYourChangesModal").modal("hide"); 
-               };
-               
-               var onSubmitError = function() {
-                  $("#saveYourChangesModal").modal("hide"); 
-               };
-               
-               $container.bind("submit.success", onSubmitSuccess);
-               $container.bind("submit.error", onSubmitError);              
-            });
+                  $("#saveYourChangesModal").modal("hide");               
+               });
 
-            $("#dismissChangesButton", "#saveYourChangesModal").on("click", function() {
-               form_changed = false;
-               $tree.jstree("deselect_all");
-               $tree.jstree("select_node", $target_node);
-               $("#saveYourChangesModal").modal("hide");               
-            });
-            
-            return false;
-         }
-      }).bind("select_node.jstree", function (event, data) {
-         var $nodeToSelect = $(data.rslt.obj);
-         if ($nodeToSelect.attr("id") === "newAO") {
-            location.hash = "#newAO";
-         } else {
-            location.hash = $nodeToSelect.find("a").attr("href");
-         }
-         $(window).hashchange();
-      });
+               return false;
+            }
+         }).bind("select_node.jstree", function (event, data) {
+            var $nodeToSelect = $(data.rslt.obj);
+            if ($nodeToSelect.find("a").attr("href") === location.hash) {
+               return;
+            }
+            if ($nodeToSelect.attr("id") === "newAO") {
+               location.hash = "#newAO";
+            } else {
+               location.hash = $nodeToSelect.find("a").attr("href");
+            }
+         });;
    };
    
    
