fix revert changes button (take 2)

--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -197,6 +197,7 @@ $(function() {
          if ($(this).attr("disabled")) {
             return;
          }
+         form_changes = false;
          loadPaneForNode($(".selected", $tree));
       });
 
