tweak brand css

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -22,7 +22,7 @@ h2 > .label {
 }
 
 .navbar .brand:hover {
-   color: white;
+   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.125);
 }
 
 .modal > form {
