--- a/frontend/app/views/collections/_tree.html.erb
+++ b/frontend/app/views/collections/_tree.html.erb
@@ -70,3 +70,12 @@
      </ul>
    </div>
 --></div>
+
+<div id="tree_nodenavigation_toolbar_template"><!--
+   <div class="tree-navigation btn-toolbar">         
+     <div class="btn-group">
+      {if defined(previous)}<a href="${previous}" class="btn btn-small"><span class="icon-arrow-left"></span></a>{/if}
+      {if defined(next)}<a href="${next}" class="btn btn-small"><span class="icon-arrow-right"></span></a>{/if}
+     </div>
+   </div>
+--></div>
