add basic info display partial for AO

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -72,3 +72,18 @@ h2 > .label {
 #object_container {
    position: relative;
 }
+
+.label-and-value .span3 {
+}
+
+.identifier-display {
+   .identifier-display-part {
+      border: 1px solid #F6F6F6;
+      background-color: #FCFCFC;
+      padding: 2px 4px;
+      margin-right: 4px;
+      min-width: 60px;
+      float: left;
+      height: 1.2em;
+   }
+}
