--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -10,7 +10,7 @@ $(function() {
         collection_tree_data = AS.tree_data["collection-id-" + $(".archives-tree").data("collection-id")];
 
     var renderTree = function() {
-        $tree.html(AS.renderTemplate("tree_template", {tree: collection_tree_data}));      
+        $tree.html(AS.renderTemplate("tree_template", {tree: collection_tree_data}));
      }
 
     var rerenderTree = function() {
@@ -55,9 +55,7 @@ $(function() {
           },
           success: function(response, status, xhr) {
               if (location.hash === "#newAO") {
-                 $(window).off("hashchange");
-                 location.hash = "#archival_object_" + $(response).find("#ao_id").val();
-                 $(window).on("hashchange", onHashChange);
+                 changeHashSilently("#archival_object_" + $(response).find("#ao_id").val());
               }
              
              initForm(response);
@@ -75,6 +73,8 @@ $(function() {
             $(".btn-primary", $form).removeAttr("disabled");
           }
        });
+       
+       $container.triggerHandler("form.loaded");
   };
    
    var loadPaneForNode = function(nodeEl) {
@@ -97,7 +97,19 @@ $(function() {
 
    var loadTreeActionsForNode = function(nodeEl) {
       // render tree navigation
-      //$container.prepend(AS.renderTemplate("tree_nodenavigation_toolbar_template", {}));
+      $container.one("form.loaded", function() {
+         $container.find(".tree-navigation").remove();
+         var allNodes = $tree.find("li");
+         var indexOfCurrentNode = allNodes.index(nodeEl);
+         var data = {};
+         if (indexOfCurrentNode !== 0) {
+            data.previous = allNodes.get(indexOfCurrentNode-1).id;
+         }
+         if (indexOfCurrentNode+1 < allNodes.length) {
+            data.next = allNodes.get(indexOfCurrentNode+1).id;
+         }
+         $container.prepend(AS.renderTemplate("tree_nodenavigation_toolbar_template", data));
+      });
       
       // render tree toolbar
       $("#archives_tree_toolbar").html(AS.renderTemplate("tree_toolbar_template"));
@@ -110,7 +122,22 @@ $(function() {
       }
    };
 
+   var changeHashSilently = function(newHash) {
+      $(window).data("ignore-hashchange", true);
+      location.hash = newHash;
+   };
+
    var onHashChange = function(){
+      if ($(window).data("ignore-hashchange")) {
+         $(window).data("ignore-hashchange", false);
+         return;
+      }      
+      if (form_changed) {
+         confirmChanges($(location.hash));
+         changeHashSilently("#"+$(".selected", $tree).attr("id"));
+         return;
+      }
+      
       if (location.hash === "#newAO") {
          return;
       }
@@ -154,7 +181,7 @@ $(function() {
                $tree.jstree("deselect_all");
                $tree.jstree("select_node", "#newAO");               
                $("form", $container).triggerHandler("form-changed");
-            }, 
+            },
             error: function() {
                console.log("ERROR! $('.archives-tree-container').on('click', '.add-child-archival-object-analog')");
             }
@@ -229,7 +256,39 @@ $(function() {
       
       $(window).hashchange(onHashChange);
    };
-   
+
+   var confirmChanges = function(targetNodeEl) {
+      // open save your changes modal
+      AS.openCustomModal("saveYourChangesModal", "Save Your Changes", AS.renderTemplate("save_changes_modal_template"));
+
+      $("#saveChangesButton", "#saveYourChangesModal").on("click", function() {
+         $("form", $container).triggerHandler("submit");
+
+         var onSubmitSuccess = function() {
+            form_changed = false
+            location.hash = targetNodeEl.attr("id");
+            $("#saveYourChangesModal").modal("hide");
+            $container.unbind("submit.success", onSubmitSuccess);
+            $container.unbind("submit.error", onSubmitError);
+         };
+
+         var onSubmitError = function() {
+            $("#saveYourChangesModal").modal("hide");
+            $container.unbind("submit.success", onSubmitSuccess);
+            $container.unbind("submit.error", onSubmitError);
+         };
+
+         $container.bind("submit.success", onSubmitSuccess);
+         $container.bind("submit.error", onSubmitError);
+      });
+
+      $("#dismissChangesButton", "#saveYourChangesModal").on("click", function() {
+         form_changed = false;
+         location.hash = targetNodeEl.attr("id");
+         $("#saveYourChangesModal").modal("hide");
+      });
+   };
+
    var initTree = function(onTreeLoadCallback) {
       $tree.jstree({
           "themes": {
@@ -296,39 +355,7 @@ $(function() {
                event.preventDefault();
                event.stopImmediatePropagation();
 
-               var $target_node = $(data.args[0]).parent(); // get the <li> node above the <a>
-
-               // open save your changes modal
-               AS.openCustomModal("saveYourChangesModal", "Save Your Changes", AS.renderTemplate("save_changes_modal_template"));
-
-               $("#saveChangesButton", "#saveYourChangesModal").on("click", function() {
-                  $("form", $container).triggerHandler("submit");
-
-                  var onSubmitSuccess = function() {
-                     form_changed = false
-                     location.hash = $target_node.attr("id");
-                     $("#saveYourChangesModal").modal("hide");
-                     $container.unbind("submit.success", onSubmitSuccess);
-                     $container.unbind("submit.error", onSubmitError);
-                  };
-
-                  var onSubmitError = function() {
-                     $("#saveYourChangesModal").modal("hide");
-                     $container.unbind("submit.success", onSubmitSuccess);
-                     $container.unbind("submit.error", onSubmitError);
-                  };
-
-                  $container.bind("submit.success", onSubmitSuccess);
-                  $container.bind("submit.error", onSubmitError);
-               });
-
-               $("#dismissChangesButton", "#saveYourChangesModal").on("click", function() {
-                  form_changed = false;
-                  $tree.jstree("deselect_all");
-                  $tree.jstree("select_node", $target_node);
-                  $("#saveYourChangesModal").modal("hide");
-               });
-
+               confirmChanges($(data.args[0]).parent());
                return false;
             }
          }).bind("select_node.jstree", function (event, data) {
