--- a/frontend/app/views/collections/_show_inline.html.erb
+++ b/frontend/app/views/collections/_show_inline.html.erb
@@ -1,5 +1,5 @@
 <div class="btn-group" style="float: right">
-  <%= link_to "Edit", {:controller=>:collections, :action=>:edit, :id=>@collection.id}, :class=>"btn btn-small" %>
+  <%= link_to "Edit", {:controller=>:collections, :action=>:edit, :id=>@collection.id, :anchor=>"collection_#{@collection.id}"}, :class=>"btn btn-small" %>
 </div>
 
 <h2><%= @collection.title %> <span class="label label-info">Collection</span></h2>
